checking mathjax overflow fix and async exercise load order

--- a/css/sols.css
+++ b/css/sols.css
@@ -44,6 +44,7 @@ p {
     flex-direction: column;
     justify-content: space-between;
 
+    overflow-wrap: break-word;
     font-size: large;
 
     border-style: solid;
